working on filter module

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Jaumo_App">
-        <activity android:name=".MainActivity">
+        <activity android:name=".FilterActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".GenderActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
