--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Jaumo_App">
+        <activity android:name=".Gender"></activity>
+        <activity android:name=".Image" />
+        <activity android:name=".Interest" />
+        <activity android:name=".Location" />
+        <activity android:name=".Age_Activity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
