finished filter and started working on complete profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Jaumo_App">
-
-        <activity android:name=".Home_Page"></activity>
+        <activity android:name=".CompleteProfileActivity"></activity>
+        <activity android:name=".SelectCountryActivity" />
+        <activity android:name=".SelectDistanceActivity" />
+        <activity android:name=".SelectGenderActivity" />
+        <activity android:name=".Home_Page" />
         <activity android:name=".Start_Page" />
-
-        <activity android:name=".FilterActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".GenderActivity" />
-
-        <activity android:name=".MainActivity">
+        <activity android:name=".FilterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
