--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Jaumo_App">
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".SignUpWithEmail"></activity>
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".Location_Filter_Women" />
         <activity android:name=".Location_Filter_Men" />
         <activity android:name=".Home_Page_Women" />
@@ -18,10 +19,10 @@
         <activity android:name=".SelectDistanceActivity" />
         <activity android:name=".SelectGenderActivity" />
         <activity android:name=".Home_Page" />
-        <activity android:name=".Start_Page" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".FilterActivity" />
         <activity android:name=".GenderActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Start_Page">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
