--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,15 @@
         <activity android:name=".SelectCountryActivity" />
         <activity android:name=".SelectDistanceActivity" />
         <activity android:name=".SelectGenderActivity" />
+        <activity android:name=".Location" />
         <activity android:name=".Home_Page" />
         <activity android:name=".Start_Page" />
-        <activity android:name=".FilterActivity" />
+        <activity android:name=".Interest" />
+        <activity android:name=".Age_Activity" />
         <activity android:name=".GenderActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".FilterActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Gender">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
