added message layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rahul.jaumo_app">
+    package="com.rahul.jaumo_app" >
 
     <application
         android:allowBackup="true"
@@ -8,10 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Jaumo_App">
-
-        <activity android:name=".messages"></activity>
-        <activity android:name=".SignUpWithEmail"></activity>
+        android:theme="@style/Theme.Jaumo_App" >
+        <activity android:name=".Premium_page" >
+        </activity>
+        <activity android:name=".messages" />
+        <activity android:name=".SignUpWithEmail" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".Location_Filter_Women" />
         <activity android:name=".Location_Filter_Men" />
@@ -28,9 +29,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Interest" />
         <activity android:name=".Age_Activity" />
-
-
-        <activity android:name=".Start_Page">
+        <activity android:name=".Start_Page" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
