--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rahul.jaumo_app" >
+    package="com.rahul.jaumo_app">
 
     <application
         android:allowBackup="true"
@@ -8,15 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:theme="@style/Theme.Jaumo_App" >
-        <activity android:name=".Premium_page" >
-        </activity>
-        <activity android:name=".messages" />
-
         android:theme="@style/Theme.Jaumo_App">
-        <activity android:name=".Google_Login"></activity>
-            <activity android:name=".SignUpWithEmail" />
+        <activity android:name=".Start_Page"></activity>
+        <activity android:name=".Account" />
+        <activity android:name=".homePage_Setting" />
+        <activity android:name=".messages" />
+        <activity android:name=".Premium_page" />
+        <activity android:name=".Info_terms" />
+        <activity android:name=".Google_Login" />
+        <activity android:name=".SignUpWithEmail" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".Location_Filter_Women" />
         <activity android:name=".Location_Filter_Men" />
@@ -33,9 +33,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Interest" />
         <activity android:name=".Age_Activity" />
-            <activity android:name=".Start_Page">
-
-
+        <activity android:name=".Support">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
