--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,55 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
         android:theme="@style/Theme.Jaumo_App">
-        <activity android:name=".Support"></activity>
+        <activity android:name=".Neeta_Singh"></activity>
+        <activity android:name=".Kareshma_Yadav" />
+        <activity android:name=".Lovely_Joy" />
+        <activity android:name=".Nisha_Dubey" />
+        <activity android:name=".Kulsum_Khan" />
+        <activity android:name=".Heena_Shaikh" />
+        <activity android:name=".Kaira_Singh" />
+        <activity android:name=".Yami_Gautam" />
+        <activity android:name=".Priyanka_Lobhe" />
+        <activity android:name=".Muskan_Khan" />
+        <activity android:name=".Jaishri_Hansa" />
+        <activity android:name=".Nidhi_Chauhan" />
+        <activity android:name=".Shreya_Singh" />
+        <activity android:name=".Dimple_Mundwa" />
+        <activity android:name=".Suman_Shiddique" />
+        <activity android:name=".Priya_Rai" />
+        <activity android:name=".Jaiswi_Jain" />
+        <activity android:name=".Neha_Sharma" />
+        <activity android:name=".Suman_Jaiswal" />
+        <activity android:name=".Anita_Dev" />
+        <activity android:name=".Abhinav_Bhati" />
+        <activity android:name=".Sachin_Goel" />
+        <activity android:name=".Bipin_Pal" />
+        <activity android:name=".Vinit_Yadav" />
+        <activity android:name=".Arsalan_Shaikh" />
+        <activity android:name=".Amir_Gupta" />
+        <activity android:name=".Mousin_Sayyed" />
+        <activity android:name=".Aditya_Sharma" />
+        <activity android:name=".Gaurav_Singh" />
+        <activity android:name=".Pravin_Francis" />
+        <activity android:name=".Hiren_Mistry" />
+        <activity android:name=".Rahul_Singh" />
+        <activity android:name=".Dhruv_Shorey" />
+        <activity android:name=".Kailash_Patel" />
+        <activity android:name=".Bunty_Gosh" />
+        <activity android:name=".Nipun_Jain" />
+        <activity android:name=".Tanmay_Punit" />
+        <activity android:name=".Binod_Jaiswal" />
+        <activity android:name=".Suraj_Gupta" />
+        <activity android:name=".Abhay_Sharma" />
+        <activity android:name=".Support" />
         <activity android:name=".Account" />
         <activity android:name=".homePage_Setting" />
         <activity android:name=".messages" />
         <activity android:name=".Premium_page" />
         <activity android:name=".Info_terms" />
-            <activity android:name=".Sent_Activity"/>
-            <activity android:name=".Google_Login" />
+        <activity android:name=".Sent_Activity" />
+        <activity android:name=".Google_Login" />
         <activity android:name=".SignUpWithEmail" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".Location_Filter_Women" />
@@ -35,13 +74,13 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Interest" />
         <activity android:name=".Age_Activity" />
-            <activity android:name=".Start_Page">
-
-                    <intent-filter>
+        <activity android:name=".Start_Page">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
