--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
         android:theme="@style/Theme.Jaumo_App">
-        <activity android:name=".Support"></activity>
+        <activity android:name=".MyLocationActivity"></activity>
+        <activity android:name=".Support" />
         <activity android:name=".Account" />
         <activity android:name=".homePage_Setting" />
         <activity android:name=".messages" />
         <activity android:name=".Info_terms" />
-            <activity android:name=".Sent_Activity"/>
-            <activity android:name=".Google_Login" />
+        <activity android:name=".Sent_Activity" />
+        <activity android:name=".Google_Login" />
         <activity android:name=".SignUpWithEmail" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".Location_Filter_Women" />
@@ -34,7 +34,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Interest" />
         <activity android:name=".Age_Activity" />
-        <activity android:name=".Premium_page"/>
+        <activity android:name=".Premium_page" />
         <activity android:name=".Start_Page">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,4 +43,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
