--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Jaumo_App">
-        <activity android:name=".SelectLookingFor"></activity>
+        <activity android:name=".Thank_you"></activity>
+        <activity android:name=".SelectLookingFor" />
         <activity android:name=".Profession" />
         <activity android:name=".MyLocationActivity" />
         <activity android:name=".Neeta_Singh" />
